# robotdog-movement

./: .gitignore  README.md  config.ini  main.py  motor_init.py  network_transmitter.py  pyproject.toml  requirements.txt  rpi_motor.py  setup.py  test_position.py  test_single.py  test_two_leg.py  three_feet.py
calculation/: gait_trajectory.ipynb  gyro_compensation.ipynb  gyroscope_compensation.ipynb  model.ipynb  trajectory_rotation.ipynb
controllers/: network_receiver.py  static_controller.py
gateways/: ServerGateway.py
model/: 3dmapping.ipynb  CameraController.py  GyroscopeController.py  LegController.py  LidarController.py  MotionCommand.py  MotionGenerator.py  MovementExecutor.py  Robotdog.py  StateManager.py  inverse_model.ipynb  kinematics.py  motion_generator.py  quadruped.py
move_logic/: LegController.py  MotionCommand.py  State.py  inverse_model.ipynb  kinematics.py  math_model.ipynb  quadruped.py
movement_test/: position.py  servo_range.py  single_leg.py
scripts/: export_yolo_ncnn.py  test_websocket.py
test/: angle.py  move.py  move_single_leg.py  position.py  test_angle.py  test_camera.py  test_curses.py  test_esp32.py  test_gyro_compensation.py  test_gyro_controller.py  test_gyroscope.py  test_gyroscope_controller.py  test_kinematics.py  test_leg_controller.py  test_move.py  test_move_with_control.py  test_move_with_state.py  test_position.py  test_rotation.py
test_movement/: test_position.py  test_single.py
tests/: GyroCompensationNicole.py  test_camera.py  test_camera_controller.py  test_gyro_compensation.py  test_gyroscope_controller.py  (+13 more)
(+43 files in other folders)
