[project]
name = "robotdog-movement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adafruit-circuitpython-servokit>=1.3.19",
    "bezier>=2024.6.20",
    "board>=1.0",
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pyrplidar>=0.1.2",
    "scipy>=1.15.2",
    "transforms3d>=0.4.2",
    "ultralytics>=8.3.23",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

